--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <li><a class="dropdown-item" href="pages/Mp_BotesR.html">Botes de Reciclaje</a></li>
                             <li><a class="dropdown-item" href="#">Rampas para discapacitados</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="/Others/Infografias.pdf">Infografias</a></li>
+                            <li><a class="dropdown-item" href="Others/Infografias.pdf">Infografias</a></li>
                         </ul>
                     </li>
                 </ul>
