--- a/pages/estadistica.html
+++ b/pages/estadistica.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('Others/cambio.jpg'); 
+            background-image: url('../Others/cambio.jpg'); 
             background-size: cover;
             color: #fff;
             text-align: center;
